[add]AddReportActivity 追加 動作確認済み style.xmlがエラーはいてるけど影響ないので放置中 ツールバー高さと色修正(色は暫定)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="Fri">Fri</string>
     <string name="Sat">Sat</string>
     <string name="Month"></string>
+
+    <!--menu_add_report用-->
+    <string name="action_settings">Settings</string>
 </resources>
